feat(backend): add jwt auth signup/login endpoints (#14)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
 PORT=4000
-DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
+DATABASE_URL="mysql://USER:PASSWORD@HOST:3306/DATABASE_NAME"
+JWT_SECRET="change-me"
+UNIVERSITY_EMAIL_DOMAIN="university.edu"
+
